@@ -85,6 +85,7 @@
                     <value>
                       <tuple>
                         <string>Assignor</string>
+                        <string>Manager</string>
                       </tuple>
                     </value>
                 </item>
@@ -93,6 +94,7 @@
                     <value>
                       <tuple>
                         <string>Assignor</string>
+                        <string>Manager</string>
                       </tuple>
                     </value>
                 </item>
@@ -101,6 +103,7 @@
                     <value>
                       <tuple>
                         <string>Assignor</string>
+                        <string>Manager</string>
                       </tuple>
                     </value>
                 </item>
